apps/secco/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secco-svc
  namespace: secco
spec:
  selector:
    app: secco
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
