apps/secco/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secco-web
  namespace: secco
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  rules:
  - host: "secco.the.magesgate.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secco-web
            port:
              number: 80
  tls:
  - hosts:
    - "secco.the.magesgate.com"
    secretName: secco-web-tls
